[gd_scene load_steps=14 format=3 uid="uid://dj1s12fwy32rr"]

[ext_resource type="Script" path="res://scenes/locations/Office.gd" id="1_lm2ok"]
[ext_resource type="Texture2D" uid="uid://bo7hcs3q5hnh8" path="res://assets/imports/graphics/backgrounds/office.png" id="2_wjgac"]
[ext_resource type="Script" path="res://scenes/UI/sticky_notes/options_button.gd" id="3_4jlkm"]
[ext_resource type="Script" path="res://scenes/UI/sticky_notes/exit_button.gd" id="4_qtgmw"]
[ext_resource type="Texture2D" uid="uid://cd4o35ipvoeqs" path="res://assets/imports/graphics/objects/sticky_notes/exit.png" id="5_1wgwq"]
[ext_resource type="Texture2D" uid="uid://dedtg84awrc8d" path="res://assets/imports/graphics/objects/sticky_notes/options.png" id="5_t32p6"]
[ext_resource type="Texture2D" uid="uid://cd170li0engef" path="res://assets/imports/graphics/objects/sticky_notes/save.png" id="7_pvh7b"]
[ext_resource type="Script" path="res://scenes/UI/main/object_button.gd" id="8_s7886"]
[ext_resource type="Texture2D" uid="uid://c760tmktstqg3" path="res://assets/imports/graphics/objects/office/computer.png" id="9_vhjki"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nulqq"]
texture = ExtResource("5_t32p6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7jlq8"]
texture = ExtResource("5_1wgwq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tswg3"]
texture = ExtResource("7_pvh7b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jypko"]
texture = ExtResource("9_vhjki")

[node name="Office" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lm2ok")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wjgac")

[node name="OptionsButton" type="Button" parent="."]
custom_minimum_size = Vector2(77, 75)
layout_mode = 0
offset_left = 709.0
offset_top = 194.0
offset_right = 786.0
offset_bottom = 270.0
focus_previous = NodePath("../ExitButton")
theme_override_styles/focus = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/disabled = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/hover = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nulqq")
theme_override_styles/normal = SubResource("StyleBoxTexture_nulqq")
script = ExtResource("3_4jlkm")

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(86, 75)
layout_mode = 0
offset_left = 744.0
offset_top = 74.0
offset_right = 830.0
offset_bottom = 149.0
focus_previous = NodePath("../PlayButton")
theme_override_styles/focus = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/hover = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/normal = SubResource("StyleBoxTexture_7jlq8")
script = ExtResource("4_qtgmw")
theme_override_styles/focus = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/hover = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7jlq8")
theme_override_styles/normal = SubResource("StyleBoxTexture_7jlq8")

[node name="SaveButton" type="Button" parent="."]
custom_minimum_size = Vector2(88, 87)
layout_mode = 0
offset_left = 826.0
offset_top = 138.0
offset_right = 914.0
offset_bottom = 225.0
focus_previous = NodePath("../PlayButton")
theme_override_styles/focus = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/disabled = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/hover = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tswg3")
theme_override_styles/normal = SubResource("StyleBoxTexture_tswg3")
script = ExtResource("8_s7886")

[node name="ComputerButton" type="Button" parent="."]
custom_minimum_size = Vector2(447, 454)
layout_mode = 0
offset_left = 331.0
offset_top = 241.0
offset_right = 778.0
offset_bottom = 695.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_jypko")
theme_override_styles/disabled = SubResource("StyleBoxTexture_jypko")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_jypko")
theme_override_styles/hover = SubResource("StyleBoxTexture_jypko")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jypko")
theme_override_styles/normal = SubResource("StyleBoxTexture_jypko")
script = ExtResource("8_s7886")
